Fix bottom area spacing/padding

--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -410,6 +410,8 @@ fieldset
 
 
 fieldset.submit
+  padding-top: 30px
+
   > .inputs
     float: left
 
@@ -424,5 +426,6 @@ fieldset.submit
 
   > .button
     float: right
+    margin-top: 6px
 
 
